parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> vars programp main
Rule 2     programp -> functions programp
Rule 3     programp -> empty
Rule 4     sexp -> expression sexprima
Rule 5     sexprima -> AND sexp
Rule 6     sexprima -> OR sexp
Rule 7     sexprima -> empty
Rule 8     expression -> exp expressionp
Rule 9     expressionp -> < exp
Rule 10    expressionp -> > exp
Rule 11    expressionp -> LTEQ exp
Rule 12    expressionp -> GTEQ exp
Rule 13    expressionp -> EQ exp
Rule 14    expressionp -> DIFF exp
Rule 15    expressionp -> empty
Rule 16    exp -> term expp
Rule 17    expp -> + exp
Rule 18    expp -> - exp
Rule 19    expp -> empty
Rule 20    term -> factor termp
Rule 21    termp -> / term
Rule 22    termp -> * term
Rule 23    termp -> empty
Rule 24    factor -> cons
Rule 25    factor -> ( sexp )
Rule 26    cons -> id
Rule 27    cons -> CTEI
Rule 28    cons -> CTEF
Rule 29    cons -> CTES
Rule 30    returntype -> VOID
Rule 31    returntype -> INT
Rule 32    returntype -> FLOAT
Rule 33    type -> INT
Rule 34    type -> FLOAT
Rule 35    type -> ARRINT arrp
Rule 36    type -> ARRFLOAT arrp
Rule 37    arrp -> [ CTEI ]
Rule 38    main -> MAIN ( ) block
Rule 39    block -> { body }
Rule 40    body -> vars statmp
Rule 41    statmp -> statm statmp
Rule 42    statmp -> empty
Rule 43    statm -> asign
Rule 44    statm -> cond
Rule 45    statm -> write
Rule 46    statm -> for
Rule 47    statm -> while
Rule 48    statm -> draw
Rule 49    statm -> empty
Rule 50    functions -> FUNCTION returntype ID ( functionsp ) block
Rule 51    functions -> empty
Rule 52    functionsp -> param
Rule 53    functionsp -> empty
Rule 54    param -> type ID paramp
Rule 55    paramp -> , param
Rule 56    paramp -> empty
Rule 57    vars -> varsp
Rule 58    vars -> empty
Rule 59    varsp -> type varspp ; varsp
Rule 60    varsp -> empty
Rule 61    varspp -> ID varsppaux
Rule 62    varsppaux -> , varspp
Rule 63    varsppaux -> empty
Rule 64    asign -> vars
Rule 65    asign -> ID asignp
Rule 66    asignp -> = sexp ;
Rule 67    asignp -> [ sexp ] = sexp ;
Rule 68    cond -> IF ( sexp ) block condp
Rule 69    condp -> ELSE block
Rule 70    condp -> empty
Rule 71    write -> PRINT ( writep ) ;
Rule 72    writep -> sexp writepp
Rule 73    writep -> CTES writepp
Rule 74    writep -> id writepp
Rule 75    writepp -> , writep
Rule 76    writepp -> empty
Rule 77    for -> FOR ( asign ; sexp ; sexp ) block
Rule 78    while -> WHILE ( sexp ) block
Rule 79    draw -> line
Rule 80    draw -> rect
Rule 81    draw -> teapot
Rule 82    draw -> cube
Rule 83    draw -> color
Rule 84    draw -> triangle
Rule 85    draw -> circle
Rule 86    draw -> arc
Rule 87    draw -> width
Rule 88    id -> ID idp
Rule 89    idp -> [ sexp ]
Rule 90    idp -> ( idpp )
Rule 91    idp -> empty
Rule 92    idpp -> sexp idppaux
Rule 93    idpp -> empty
Rule 94    idppaux -> , idpp
Rule 95    idppaux -> empty
Rule 96    line -> LINE ( sexp , sexp , sexp , sexp ) ;
Rule 97    rect -> RECT ( sexp , sexp , sexp , sexp ) ;
Rule 98    teapot -> TEAPOT ( sexp , sexp , sexp , sexp ) ;
Rule 99    triangle -> TRIANGLE ( sexp , sexp , sexp , sexp ) ;
Rule 100   cube -> CUBE ( sexp , sexp , sexp , sexp ) ;
Rule 101   color -> COLOR ( sexp , sexp , sexp ) ;
Rule 102   arc -> ARC ( sexp , sexp , sexp , sexp ) ;
Rule 103   circle -> CIRCLE ( sexp , sexp , sexp ) ;
Rule 104   width -> WIDTH ( sexp ) ;
Rule 105   empty -> <empty>

Terminals, with rules where they appear

(                    : 25 38 50 68 71 77 78 90 96 97 98 99 100 101 102 103 104
)                    : 25 38 50 68 71 77 78 90 96 97 98 99 100 101 102 103 104
*                    : 22
+                    : 17
,                    : 55 62 75 94 96 96 96 97 97 97 98 98 98 99 99 99 100 100 100 101 101 102 102 102 103 103
-                    : 18
/                    : 21
;                    : 59 66 67 71 77 77 96 97 98 99 100 101 102 103 104
<                    : 9
=                    : 66 67
>                    : 10
AND                  : 5
ARC                  : 102
ARRFLOAT             : 36
ARRINT               : 35
CIRCLE               : 103
COLOR                : 101
CTEF                 : 28
CTEI                 : 27 37
CTES                 : 29 73
CUBE                 : 100
DIFF                 : 14
ELSE                 : 69
EQ                   : 13
FLOAT                : 32 34
FOR                  : 77
FUNCTION             : 50
GTEQ                 : 12
ID                   : 50 54 61 65 88
IF                   : 68
INT                  : 31 33
LINE                 : 96
LTEQ                 : 11
MAIN                 : 38
OR                   : 6
PRINT                : 71
RECT                 : 97
TEAPOT               : 98
TRIANGLE             : 99
VOID                 : 30
WHILE                : 78
WIDTH                : 104
[                    : 37 67 89
]                    : 37 67 89
error                : 
{                    : 39
}                    : 39

Nonterminals, with rules where they appear

arc                  : 86
arrp                 : 35 36
asign                : 43 77
asignp               : 65
block                : 38 50 68 69 77 78
body                 : 39
circle               : 85
color                : 83
cond                 : 44
condp                : 68
cons                 : 24
cube                 : 82
draw                 : 48
empty                : 3 7 15 19 23 42 49 51 53 56 58 60 63 70 76 91 93 95
exp                  : 8 9 10 11 12 13 14 17 18
expp                 : 16
expression           : 4
expressionp          : 8
factor               : 20
for                  : 46
functions            : 2
functionsp           : 50
id                   : 26 74
idp                  : 88
idpp                 : 90 94
idppaux              : 92
line                 : 79
main                 : 1
param                : 52 55
paramp               : 54
program              : 0
programp             : 1 2
rect                 : 80
returntype           : 50
sexp                 : 5 6 25 66 67 67 68 72 77 77 78 89 92 96 96 96 96 97 97 97 97 98 98 98 98 99 99 99 99 100 100 100 100 101 101 101 102 102 102 102 103 103 103 104
sexprima             : 4
statm                : 41
statmp               : 40 41
teapot               : 81
term                 : 16 21 22
termp                : 20
triangle             : 84
type                 : 54 59
vars                 : 1 40 64
varsp                : 57 59
varspp               : 59 62
varsppaux            : 61
while                : 47
width                : 87
write                : 45
writep               : 71 75
writepp              : 72 73 74

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . vars programp main
    (57) vars -> . varsp
    (58) vars -> . empty
    (59) varsp -> . type varspp ; varsp
    (60) varsp -> . empty
    (105) empty -> .
    (33) type -> . INT
    (34) type -> . FLOAT
    (35) type -> . ARRINT arrp
    (36) type -> . ARRFLOAT arrp

    FUNCTION        reduce using rule 105 (empty -> .)
    MAIN            reduce using rule 105 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    ARRINT          shift and go to state 1
    ARRFLOAT        shift and go to state 2

    vars                           shift and go to state 3
    program                        shift and go to state 6
    varsp                          shift and go to state 7
    type                           shift and go to state 8
    empty                          shift and go to state 9

state 1

    (35) type -> ARRINT . arrp
    (37) arrp -> . [ CTEI ]

    [               shift and go to state 10

    arrp                           shift and go to state 11

state 2

    (36) type -> ARRFLOAT . arrp
    (37) arrp -> . [ CTEI ]

    [               shift and go to state 10

    arrp                           shift and go to state 12

state 3

    (1) program -> vars . programp main
    (2) programp -> . functions programp
    (3) programp -> . empty
    (50) functions -> . FUNCTION returntype ID ( functionsp ) block
    (51) functions -> . empty
    (105) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 105 (empty -> .)

  ! FUNCTION        [ reduce using rule 105 (empty -> .) ]

    functions                      shift and go to state 14
    programp                       shift and go to state 15
    empty                          shift and go to state 16

state 4

    (33) type -> INT .

    ID              reduce using rule 33 (type -> INT .)


state 5

    (34) type -> FLOAT .

    ID              reduce using rule 34 (type -> FLOAT .)


state 6

    (0) S' -> program .



state 7

    (57) vars -> varsp .

    ID              reduce using rule 57 (vars -> varsp .)
    IF              reduce using rule 57 (vars -> varsp .)
    PRINT           reduce using rule 57 (vars -> varsp .)
    FOR             reduce using rule 57 (vars -> varsp .)
    WHILE           reduce using rule 57 (vars -> varsp .)
    LINE            reduce using rule 57 (vars -> varsp .)
    RECT            reduce using rule 57 (vars -> varsp .)
    TEAPOT          reduce using rule 57 (vars -> varsp .)
    CUBE            reduce using rule 57 (vars -> varsp .)
    COLOR           reduce using rule 57 (vars -> varsp .)
    TRIANGLE        reduce using rule 57 (vars -> varsp .)
    CIRCLE          reduce using rule 57 (vars -> varsp .)
    ARC             reduce using rule 57 (vars -> varsp .)
    WIDTH           reduce using rule 57 (vars -> varsp .)
    INT             reduce using rule 57 (vars -> varsp .)
    FLOAT           reduce using rule 57 (vars -> varsp .)
    ARRINT          reduce using rule 57 (vars -> varsp .)
    ARRFLOAT        reduce using rule 57 (vars -> varsp .)
    }               reduce using rule 57 (vars -> varsp .)
    ;               reduce using rule 57 (vars -> varsp .)
    FUNCTION        reduce using rule 57 (vars -> varsp .)
    MAIN            reduce using rule 57 (vars -> varsp .)


state 8

    (59) varsp -> type . varspp ; varsp
    (61) varspp -> . ID varsppaux

    ID              shift and go to state 18

    varspp                         shift and go to state 17

state 9

    (58) vars -> empty .
    (60) varsp -> empty .

  ! reduce/reduce conflict for ID resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for IF resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for PRINT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for FOR resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for WHILE resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for LINE resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for RECT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for TEAPOT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for CUBE resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for COLOR resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for TRIANGLE resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for CIRCLE resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for ARC resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for WIDTH resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for INT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for FLOAT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for ARRINT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for ARRFLOAT resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for } resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for ; resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 58 (vars -> empty .)
  ! reduce/reduce conflict for MAIN resolved using rule 58 (vars -> empty .)
    ID              reduce using rule 58 (vars -> empty .)
    IF              reduce using rule 58 (vars -> empty .)
    PRINT           reduce using rule 58 (vars -> empty .)
    FOR             reduce using rule 58 (vars -> empty .)
    WHILE           reduce using rule 58 (vars -> empty .)
    LINE            reduce using rule 58 (vars -> empty .)
    RECT            reduce using rule 58 (vars -> empty .)
    TEAPOT          reduce using rule 58 (vars -> empty .)
    CUBE            reduce using rule 58 (vars -> empty .)
    COLOR           reduce using rule 58 (vars -> empty .)
    TRIANGLE        reduce using rule 58 (vars -> empty .)
    CIRCLE          reduce using rule 58 (vars -> empty .)
    ARC             reduce using rule 58 (vars -> empty .)
    WIDTH           reduce using rule 58 (vars -> empty .)
    INT             reduce using rule 58 (vars -> empty .)
    FLOAT           reduce using rule 58 (vars -> empty .)
    ARRINT          reduce using rule 58 (vars -> empty .)
    ARRFLOAT        reduce using rule 58 (vars -> empty .)
    }               reduce using rule 58 (vars -> empty .)
    ;               reduce using rule 58 (vars -> empty .)
    FUNCTION        reduce using rule 58 (vars -> empty .)
    MAIN            reduce using rule 58 (vars -> empty .)

  ! ID              [ reduce using rule 60 (varsp -> empty .) ]
  ! IF              [ reduce using rule 60 (varsp -> empty .) ]
  ! PRINT           [ reduce using rule 60 (varsp -> empty .) ]
  ! FOR             [ reduce using rule 60 (varsp -> empty .) ]
  ! WHILE           [ reduce using rule 60 (varsp -> empty .) ]
  ! LINE            [ reduce using rule 60 (varsp -> empty .) ]
  ! RECT            [ reduce using rule 60 (varsp -> empty .) ]
  ! TEAPOT          [ reduce using rule 60 (varsp -> empty .) ]
  ! CUBE            [ reduce using rule 60 (varsp -> empty .) ]
  ! COLOR           [ reduce using rule 60 (varsp -> empty .) ]
  ! TRIANGLE        [ reduce using rule 60 (varsp -> empty .) ]
  ! CIRCLE          [ reduce using rule 60 (varsp -> empty .) ]
  ! ARC             [ reduce using rule 60 (varsp -> empty .) ]
  ! WIDTH           [ reduce using rule 60 (varsp -> empty .) ]
  ! INT             [ reduce using rule 60 (varsp -> empty .) ]
  ! FLOAT           [ reduce using rule 60 (varsp -> empty .) ]
  ! ARRINT          [ reduce using rule 60 (varsp -> empty .) ]
  ! ARRFLOAT        [ reduce using rule 60 (varsp -> empty .) ]
  ! }               [ reduce using rule 60 (varsp -> empty .) ]
  ! ;               [ reduce using rule 60 (varsp -> empty .) ]
  ! FUNCTION        [ reduce using rule 60 (varsp -> empty .) ]
  ! MAIN            [ reduce using rule 60 (varsp -> empty .) ]


state 10

    (37) arrp -> [ . CTEI ]

    CTEI            shift and go to state 19


state 11

    (35) type -> ARRINT arrp .

    ID              reduce using rule 35 (type -> ARRINT arrp .)


state 12

    (36) type -> ARRFLOAT arrp .

    ID              reduce using rule 36 (type -> ARRFLOAT arrp .)


state 13

    (50) functions -> FUNCTION . returntype ID ( functionsp ) block
    (30) returntype -> . VOID
    (31) returntype -> . INT
    (32) returntype -> . FLOAT

    VOID            shift and go to state 20
    INT             shift and go to state 22
    FLOAT           shift and go to state 21

    returntype                     shift and go to state 23

state 14

    (2) programp -> functions . programp
    (2) programp -> . functions programp
    (3) programp -> . empty
    (50) functions -> . FUNCTION returntype ID ( functionsp ) block
    (51) functions -> . empty
    (105) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 105 (empty -> .)

  ! FUNCTION        [ reduce using rule 105 (empty -> .) ]

    functions                      shift and go to state 14
    programp                       shift and go to state 24
    empty                          shift and go to state 16

state 15

    (1) program -> vars programp . main
    (38) main -> . MAIN ( ) block

    MAIN            shift and go to state 25

    main                           shift and go to state 26

state 16

    (3) programp -> empty .
    (51) functions -> empty .

  ! reduce/reduce conflict for MAIN resolved using rule 3 (programp -> empty .)
    MAIN            reduce using rule 3 (programp -> empty .)
    FUNCTION        reduce using rule 51 (functions -> empty .)

  ! MAIN            [ reduce using rule 51 (functions -> empty .) ]


state 17

    (59) varsp -> type varspp . ; varsp

    ;               shift and go to state 27


state 18

    (61) varspp -> ID . varsppaux
    (62) varsppaux -> . , varspp
    (63) varsppaux -> . empty
    (105) empty -> .

    ,               shift and go to state 30
    ;               reduce using rule 105 (empty -> .)

    varsppaux                      shift and go to state 28
    empty                          shift and go to state 29

state 19

    (37) arrp -> [ CTEI . ]

    ]               shift and go to state 31


state 20

    (30) returntype -> VOID .

    ID              reduce using rule 30 (returntype -> VOID .)


state 21

    (32) returntype -> FLOAT .

    ID              reduce using rule 32 (returntype -> FLOAT .)


state 22

    (31) returntype -> INT .

    ID              reduce using rule 31 (returntype -> INT .)


state 23

    (50) functions -> FUNCTION returntype . ID ( functionsp ) block

    ID              shift and go to state 32


state 24

    (2) programp -> functions programp .

    MAIN            reduce using rule 2 (programp -> functions programp .)


state 25

    (38) main -> MAIN . ( ) block

    (               shift and go to state 33


state 26

    (1) program -> vars programp main .

    $end            reduce using rule 1 (program -> vars programp main .)


state 27

    (59) varsp -> type varspp ; . varsp
    (59) varsp -> . type varspp ; varsp
    (60) varsp -> . empty
    (33) type -> . INT
    (34) type -> . FLOAT
    (35) type -> . ARRINT arrp
    (36) type -> . ARRFLOAT arrp
    (105) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for ARRINT resolved as shift
  ! shift/reduce conflict for ARRFLOAT resolved as shift
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    ARRINT          shift and go to state 1
    ARRFLOAT        shift and go to state 2
    FUNCTION        reduce using rule 105 (empty -> .)
    MAIN            reduce using rule 105 (empty -> .)
    ID              reduce using rule 105 (empty -> .)
    IF              reduce using rule 105 (empty -> .)
    PRINT           reduce using rule 105 (empty -> .)
    FOR             reduce using rule 105 (empty -> .)
    WHILE           reduce using rule 105 (empty -> .)
    LINE            reduce using rule 105 (empty -> .)
    RECT            reduce using rule 105 (empty -> .)
    TEAPOT          reduce using rule 105 (empty -> .)
    CUBE            reduce using rule 105 (empty -> .)
    COLOR           reduce using rule 105 (empty -> .)
    TRIANGLE        reduce using rule 105 (empty -> .)
    CIRCLE          reduce using rule 105 (empty -> .)
    ARC             reduce using rule 105 (empty -> .)
    WIDTH           reduce using rule 105 (empty -> .)
    }               reduce using rule 105 (empty -> .)
    ;               reduce using rule 105 (empty -> .)

  ! INT             [ reduce using rule 105 (empty -> .) ]
  ! FLOAT           [ reduce using rule 105 (empty -> .) ]
  ! ARRINT          [ reduce using rule 105 (empty -> .) ]
  ! ARRFLOAT        [ reduce using rule 105 (empty -> .) ]

    varsp                          shift and go to state 34
    type                           shift and go to state 8
    empty                          shift and go to state 35

state 28

    (61) varspp -> ID varsppaux .

    ;               reduce using rule 61 (varspp -> ID varsppaux .)


state 29

    (63) varsppaux -> empty .

    ;               reduce using rule 63 (varsppaux -> empty .)


state 30

    (62) varsppaux -> , . varspp
    (61) varspp -> . ID varsppaux

    ID              shift and go to state 18

    varspp                         shift and go to state 36

state 31

    (37) arrp -> [ CTEI ] .

    ID              reduce using rule 37 (arrp -> [ CTEI ] .)


state 32

    (50) functions -> FUNCTION returntype ID . ( functionsp ) block

    (               shift and go to state 37


state 33

    (38) main -> MAIN ( . ) block

    )               shift and go to state 38


state 34

    (59) varsp -> type varspp ; varsp .

    ID              reduce using rule 59 (varsp -> type varspp ; varsp .)
    IF              reduce using rule 59 (varsp -> type varspp ; varsp .)
    PRINT           reduce using rule 59 (varsp -> type varspp ; varsp .)
    FOR             reduce using rule 59 (varsp -> type varspp ; varsp .)
    WHILE           reduce using rule 59 (varsp -> type varspp ; varsp .)
    LINE            reduce using rule 59 (varsp -> type varspp ; varsp .)
    RECT            reduce using rule 59 (varsp -> type varspp ; varsp .)
    TEAPOT          reduce using rule 59 (varsp -> type varspp ; varsp .)
    CUBE            reduce using rule 59 (varsp -> type varspp ; varsp .)
    COLOR           reduce using rule 59 (varsp -> type varspp ; varsp .)
    TRIANGLE        reduce using rule 59 (varsp -> type varspp ; varsp .)
    CIRCLE          reduce using rule 59 (varsp -> type varspp ; varsp .)
    ARC             reduce using rule 59 (varsp -> type varspp ; varsp .)
    WIDTH           reduce using rule 59 (varsp -> type varspp ; varsp .)
    INT             reduce using rule 59 (varsp -> type varspp ; varsp .)
    FLOAT           reduce using rule 59 (varsp -> type varspp ; varsp .)
    ARRINT          reduce using rule 59 (varsp -> type varspp ; varsp .)
    ARRFLOAT        reduce using rule 59 (varsp -> type varspp ; varsp .)
    }               reduce using rule 59 (varsp -> type varspp ; varsp .)
    FUNCTION        reduce using rule 59 (varsp -> type varspp ; varsp .)
    MAIN            reduce using rule 59 (varsp -> type varspp ; varsp .)
    ;               reduce using rule 59 (varsp -> type varspp ; varsp .)


state 35

    (60) varsp -> empty .

    FUNCTION        reduce using rule 60 (varsp -> empty .)
    MAIN            reduce using rule 60 (varsp -> empty .)
    ID              reduce using rule 60 (varsp -> empty .)
    IF              reduce using rule 60 (varsp -> empty .)
    PRINT           reduce using rule 60 (varsp -> empty .)
    FOR             reduce using rule 60 (varsp -> empty .)
    WHILE           reduce using rule 60 (varsp -> empty .)
    LINE            reduce using rule 60 (varsp -> empty .)
    RECT            reduce using rule 60 (varsp -> empty .)
    TEAPOT          reduce using rule 60 (varsp -> empty .)
    CUBE            reduce using rule 60 (varsp -> empty .)
    COLOR           reduce using rule 60 (varsp -> empty .)
    TRIANGLE        reduce using rule 60 (varsp -> empty .)
    CIRCLE          reduce using rule 60 (varsp -> empty .)
    ARC             reduce using rule 60 (varsp -> empty .)
    WIDTH           reduce using rule 60 (varsp -> empty .)
    INT             reduce using rule 60 (varsp -> empty .)
    FLOAT           reduce using rule 60 (varsp -> empty .)
    ARRINT          reduce using rule 60 (varsp -> empty .)
    ARRFLOAT        reduce using rule 60 (varsp -> empty .)
    }               reduce using rule 60 (varsp -> empty .)
    ;               reduce using rule 60 (varsp -> empty .)


state 36

    (62) varsppaux -> , varspp .

    ;               reduce using rule 62 (varsppaux -> , varspp .)


state 37

    (50) functions -> FUNCTION returntype ID ( . functionsp ) block
    (52) functionsp -> . param
    (53) functionsp -> . empty
    (54) param -> . type ID paramp
    (105) empty -> .
    (33) type -> . INT
    (34) type -> . FLOAT
    (35) type -> . ARRINT arrp
    (36) type -> . ARRFLOAT arrp

    )               reduce using rule 105 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    ARRINT          shift and go to state 1
    ARRFLOAT        shift and go to state 2

    param                          shift and go to state 39
    functionsp                     shift and go to state 41
    type                           shift and go to state 42
    empty                          shift and go to state 40

state 38

    (38) main -> MAIN ( ) . block
    (39) block -> . { body }

    {               shift and go to state 43

    block                          shift and go to state 44

state 39

    (52) functionsp -> param .

    )               reduce using rule 52 (functionsp -> param .)


state 40

    (53) functionsp -> empty .

    )               reduce using rule 53 (functionsp -> empty .)


state 41

    (50) functions -> FUNCTION returntype ID ( functionsp . ) block

    )               shift and go to state 45


state 42

    (54) param -> type . ID paramp

    ID              shift and go to state 46


state 43

    (39) block -> { . body }
    (40) body -> . vars statmp
    (57) vars -> . varsp
    (58) vars -> . empty
    (59) varsp -> . type varspp ; varsp
    (60) varsp -> . empty
    (105) empty -> .
    (33) type -> . INT
    (34) type -> . FLOAT
    (35) type -> . ARRINT arrp
    (36) type -> . ARRFLOAT arrp

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for ARRINT resolved as shift
  ! shift/reduce conflict for ARRFLOAT resolved as shift
    ID              reduce using rule 105 (empty -> .)
    IF              reduce using rule 105 (empty -> .)
    PRINT           reduce using rule 105 (empty -> .)
    FOR             reduce using rule 105 (empty -> .)
    WHILE           reduce using rule 105 (empty -> .)
    LINE            reduce using rule 105 (empty -> .)
    RECT            reduce using rule 105 (empty -> .)
    TEAPOT          reduce using rule 105 (empty -> .)
    CUBE            reduce using rule 105 (empty -> .)
    COLOR           reduce using rule 105 (empty -> .)
    TRIANGLE        reduce using rule 105 (empty -> .)
    CIRCLE          reduce using rule 105 (empty -> .)
    ARC             reduce using rule 105 (empty -> .)
    WIDTH           reduce using rule 105 (empty -> .)
    }               reduce using rule 105 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    ARRINT          shift and go to state 1
    ARRFLOAT        shift and go to state 2

  ! INT             [ reduce using rule 105 (empty -> .) ]
  ! FLOAT           [ reduce using rule 105 (empty -> .) ]
  ! ARRINT          [ reduce using rule 105 (empty -> .) ]
  ! ARRFLOAT        [ reduce using rule 105 (empty -> .) ]

    body                           shift and go to state 47
    vars                           shift and go to state 48
    varsp                          shift and go to state 7
    type                           shift and go to state 8
    empty                          shift and go to state 9

state 44

    (38) main -> MAIN ( ) block .

    $end            reduce using rule 38 (main -> MAIN ( ) block .)


state 45

    (50) functions -> FUNCTION returntype ID ( functionsp ) . block
    (39) block -> . { body }

    {               shift and go to state 43

    block                          shift and go to state 49

state 46
